--- a/pages/photo/photo.wxml
+++ b/pages/photo/photo.wxml
@@ -1,26 +1,44 @@
-<view>
+<!-- 最终保存的 -->
+<canvas canvas-id="download" class="downloadCanvas"></canvas>
+
+<view wx:if="{{step=='1'}}">
   <camera device-position="{{device}}" flash="{{isFlash}}" class="camerabgImage-view" wx:if='{{showCamera}}'></camera>
+  <!-- 在页面上展示的 -->
+  <canvas canvas-id="show" class="showCanvas"></canvas>
+
   <!-- 模版 -->
-<scroll-view scroll-x='true' style='width:100%;height:60px' class="module">
-  <view class="img-total">
-    <view class="img" wx:for='{{modules}}' wx:key='index'>
-      <image src="{{item.img}}" bindtap="selectModule" data-item='{{item}}' data-index="{{index}}"></image>
-      <view class="mask" wx:if='{{item.isSelected}}'>
-        <image src="../../static/icon-color.png" mode="widthFix"></image>
+  <scroll-view scroll-x='true' style='width:100%;height:60px' class="module" wx:if='{{!isSelectFilter}}'>
+    <view class="img-total">
+      <view class="img" wx:for='{{modules}}' wx:key='index'>
+        <image src="{{item.img}}" bindtap="selectModule" data-item='{{item}}' data-index="{{index}}"></image>
+        <view class="mask" wx:if='{{item.isSelected}}'>
+          <image src="../../static/icon-color.png" mode="widthFix"></image>
+        </view>
       </view>
     </view>
-  </view>
-</scroll-view>
+  </scroll-view>
+  <!-- 滤镜 -->
+  <scroll-view scroll-x='true' style='width:100%;height:60px' class="module" wx:if='{{isSelectFilter}}'>
+    <view class="img-total">
+      <view class="img" wx:for='{{filters}}' wx:key='index'>
+        <image src="{{item.img}}" bindtap="selectFilter" data-item='{{item}}' data-index="{{index}}"></image>
+        <view class="mask" wx:if='{{item.isSelected}}'>
+          <image src="../../static/icon-color.png" mode="widthFix"></image>
+        </view>
+      </view>
+    </view>
+  </scroll-view>
   <!-- 下面拍照功能 -->
-<view class="first">
-  <view class="left" bindtap="gotoChooseImg">
-    <image src="../../static/icon-color.png" mode="aspectFill"></image>
+  <view class="first">
+    <view class="left" bindtap="gotoChooseImg">
+      <image src="../../static/filter.png" mode="aspectFill" wx:if='{{!hasSelectFilter}}' bindtap="showFilter"></image>
+      <image src="../../static/filter-choose.png" mode="aspectFill" wx:if='{{hasSelectFilter}}'></image>
+    </view>
+    <view class="photo-btn">
+      <view class="inner" bindtap="takePhoto"></view>
+    </view>
+    <view class="auto">
+      <image src="../../static/auto.png" mode="widthFix" bindtap="changeDevice"></image>
+    </view>
   </view>
-  <view class="photo-btn">
-    <view class="inner" bindtap="takePhoto"></view>
-  </view>
-  <view class="auto">
-    <image src="../../static/auto.png" mode="widthFix" bindtap="changeDevice"></image>
-  </view>
-</view>
 </view>
